[package]
name = "ntinject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.28.4"
ntapi = "0.4.1"
winapi = { version = "0.3.8", features = ["ntdef", "ntstatus", "impl-default", "basetsd"] }
libaes = "0.6.4"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.17"
bytes = "1.1.0"